Fix drawSprite deprecation